# quid-bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  config.toml.example
docs/: IMPLEMENTATION_PLAN.md
migrations/: 001_init.sql
src/: ai.rs  config.rs  crypto.rs  db.rs  main.rs  voice.rs
src/commands/: alarm.rs  ask.rs  diary.rs  habit.rs  help.rs  memo.rs  mod.rs  music.rs  news.rs  pomo.rs  remind.rs  settings.rs  sleep.rs  thread.rs  today.rs  todo.rs
